[package]
name = "cache_field"
version = "0.0.0"
edition = "2021"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/test.rs"

[dependencies]
itertools = "0.13.0"
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = { version = "2.0.72", features = ["full", "extra-traits"] }
trybuild = "1.0.97"
